Stylized CheckIn Kiosk

--- a/apps/customer-kiosk/index.html
+++ b/apps/customer-kiosk/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,7 +24,7 @@
       }
     </style>
   </head>
-  <body class="theme-dark effect-frosted">
+  <body>
     <!-- SVG Filter Definition (for Liquid Glass `effect-liquid`) -->
     <svg style="display: none">
       <defs>
