--- a/apps/employee-register/index.html
+++ b/apps/employee-register/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,13 +18,13 @@
           'Segoe UI',
           Roboto,
           sans-serif;
-        background: #0c1222;
-        color: #f8fafc;
+        background: #000000;
+        color: #ffffff;
         min-height: 100vh;
       }
     </style>
   </head>
-  <body class="theme-dark effect-frosted">
+  <body>
     <!-- SVG Filter Definition (for Liquid Glass `effect-liquid`) -->
     <svg style="display: none">
       <defs>
